--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ repositories {
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+
+    // hsqlDB
+    runtimeOnly group: 'org.hsqldb', name: 'hsqldb', version: '2.5.0'
 
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.junit.jupiter:junit-jupiter-api")
