--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,12 @@ server:
 spring:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     datasource:
       driver-class-name: org.hsqldb.jdbc.JDBCDriver
       url: jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
       username: sa
       password:
+
+urlshortener:
+  base-address: http://localhost:8080/
